# AlgorithmicTrading

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  README.md  contribution.md  docker-compose.yaml  fetch_data_flow-deployment.yaml  memo_store.toml  profiles.toml  pyproject.toml  setup.cfg
data/crypto/: bitcoin.csv
docs/: readme.md
src/: flow_install.py
src/data_source/: __init__.py  crypto_source.py  data_source.py  data_source_api.py  fetch_crypto_data.py  snp.py  stock_source.py
src/flows/: trading_flows.py
src/indicators/: indicator.py
src/models/: backtest.py  manual_logic.py
