[tool.poetry]
name = "algorithmictrading"
version = "0.1.0"
description = "resource to do algorithmic trading"
authors = ["shekharkoirala <shekharkoirala4@gmail.com>", "pysaaurav", "geeksambhu", "kgajurel"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.10.11"
pycoingecko = "==3.1.0"
numpy = "==1.24.2"
pandas = "==2.0.0"
matplotlib = "==3.7.1"
pytest = "==7.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
